# todolist

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  fixtures.json  pyproject.toml
ToDoList/: asgi.py  settings.py  urls.py  wsgi.py
todolist/: admin.py  models.py  serializers.py  tests.py  views.py
todolist/migrations/: 0001_initial.py
